<resources>
    <string name="app_name">Salesorder</string>
    <string name="local2">Local (Connect Office Wi-Fi)</string>
    <string name="local">Local</string>
    <string name="get">Get</string>
    <string name="last_synchronize">Last Synchronize</string>
    <string name="re_sync_all">Re-sync All</string>
    <string name="update_all">Update All</string>
    <string name="price_setting">Price Setting</string>
    <string name="store">Store</string>
    <string name="tax_type">Tax Type</string>
    <string name="tax_item_matching">Tax Item Matching</string>
    <string name="tax_code">Tax Code</string>
    <string name="customer">Customer</string>
    <string name="customer_company">Customer Company</string>
    <string name="customer_company_address">Customer Company Address</string>
    <string name="branch">Branch</string>
    <string name="customer_address">Customer Address</string>
    <string name="item_packing">Item Packing</string>
    <string name="item_company">Item Company</string>
    <string name="company">Company</string>
    <string name="quantity">Quantity</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="local_purchase_order">Local Purchase Order (LPO)</string>
    <string name="remark">Remark</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="database">Database</string>
    <string name="update">Update</string>
    <string name="house_keeping">House Keeping</string>
    <string name="update_app_ver">Update App Version</string>
    <string name="history">History</string>
    <string name="session">Session</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="upload">Upload</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="document_date">Document Date</string>
    <string name="start">Start</string>
    <string name="documentDate">Date</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="print">Print</string>
    <string name="search_here">Search Here</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="filter">Filter</string>
    <string name="filter_document_date">Filter Document Date</string>
    <string name="_continue">Continue</string>
    <string name="px_by_wgt">Px By Wgt</string>
    <string name="kg">Kg</string>
    <string name="rm">RM</string>
    <string name="total_price">Total Price</string>
    <string name="list_of_items">List of Items</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="draft">Draft</string>
    <string name="confirm">Confirm</string>
    <string name="status">Status</string>
    <string name="error">Error</string>
    <string name="version">Version</string>
    <string name="salesorder">Salesorder</string>
    <string name="download">Download</string>
    <string name="retrieve">Retrieve</string>
    <string name="short_document_date">Doc Date</string>
    <string name="total_draft">Total Draft</string>
    <string name="total_confirm">Total Confirm</string>
    <string name="pending_upload">Pending Upload</string>
    <string name="last_history_log">Last History Log</string>
    <string name="salesorder_this_month">Salesorder This Month</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="upload_and_sync">Upload &amp; Sync</string>

    <string name="default_progress">0/0 (0.00%)</string>
    <string name="default_quantity">1</string>
    <string name="default_upload">0</string>

    <string name="no_customer_selected">No Customer Selected.</string>
    <string name="no_address_selected">No Address Selected.</string>
    <string name="pending_not_yet_upload_data">Pending not yet upload data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_notification_channel_name">Primary</string>

    <string name="error_field_required">This field is required</string>
    <string name="msg_unexpected_error">Unexpected error occurs!</string>
    <string name="msg_login_fail">Login failed!</string>

    <string name="dialog_title_so_confirm">Are you sure to confirm?</string>
    <string name="dialog_msg_so_confirm">Edit is not allowed after confirm.</string>
    <string name="dialog_btn_positive_so_confirm">Confirm</string>
    <string name="dialog_title_so_draft">Are you sure to save as draft?</string>
    <string name="dialog_msg_so_draft">Upload is not allowed in draft.</string>
    <string name="dialog_btn_positive_so_draft">Save as draft</string>
    <string name="dialog_title_delete_draft">Are you sure to delete selected draft?</string>
    <string name="dialog_msg_delete_draft">Data is retrievable after delete.</string>
    <string name="dialog_btn_positive_delete_draft">Delete</string>
    <string name="dialog_title_exit_app">Are you sure to exit?</string>
    <string name="dialog_msg_exit_app">Unsaved data will loss.</string>
    <string name="dialog_btn_positive_exit_app">Exit</string>
    <string name="dialog_title_logout_with_draft">Are you sure to logout with un-confirm draft?</string>
    <string name="dialog_msg_logout_with_draft">Un-confirm draft will loss.</string>
    <string name="dialog_btn_positive_logout_with_draft">Logout</string>
    <string name="dialog_title_logout">Are you sure to logout?</string>
    <string name="dialog_msg_logout">Internet connection is required to login.</string>
    <string name="dialog_btn_positive_logout">Logout</string>

    <string name="dialog_title_get_history">Are you sure to retrieve history from server?</string>
    <string name="dialog_msg_get_history">Confirmed salesorder will refresh based on server.</string>
    <string name="dialog_btn_positive_get_history">Retrieve</string>

    <string name="dialog_title_select_company">Select company before enter?</string>
    <string name="dialog_msg_select_company">No company selected, please select a company to proceed.</string>
    <string name="dialog_btn_positive_select_company">Select</string>

    <string name="dialog_title_resync_hk">Resync all house keeping data?</string>
    <string name="dialog_msg_resync_hk">This will take at least half an hour to process.</string>
    <string name="dialog_btn_positive_resync_hk">Resync</string>

    <string name="dialog_error_msg_so_no_item">No item to proceed, please add at least 1 item.</string>
    <string name="dialog_error_msg_no_data_upload">No data to upload.</string>
    <string name="dialog_error_msg_unable_retrieve_history_due_to_un_upload_data">Unable to retrieve history data due to remaining un-upload data.</string>
    <string name="dialog_error_msg_got_un_upload">Got un-upload data, please upload before logout.</string>
    <string name="dialog_error_msg_perform_retrieve_history_first">Please perform retrieve history before create new salesorder.</string>
    <string name="dialog_error_msg_perform_retrieve_house_keeping_first">Please perform retrieve house keeping before create new salesorder.</string>

    <string name="note_alert_clear_detail">
        * Please note that changing customer company and delivery date will clear all pre-selected items.
    </string>

    <string name="transition_so_view">transition_so_view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
