<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_drawer_start_company"
            android:icon="@drawable/ic_baseline_business_24px"
            android:title="@string/company" />
    </group>
    <item android:title="@string/database">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_drawer_start_house_keeping"
                    android:icon="@drawable/ic_baseline_view_quilt_24px"
                    android:title="@string/house_keeping" />
                <item
                    android:id="@+id/main_drawer_start_history"
                    android:icon="@drawable/ic_baseline_history_24px"
                    android:title="@string/history" />
                <item
                    android:id="@+id/main_drawer_start_upload"
                    android:icon="@drawable/ic_outline_cloud_upload_24px"
                    android:title="@string/upload" />
            </group>
        </menu>
    </item>
    <item android:title="@string/update">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_drawer_start_update_app_ver"
                    android:icon="@drawable/ic_update_black_18dp"
                    android:title="@string/update_app_ver" />
            </group>
        </menu>
    </item>
    <item android:title="@string/session">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_drawer_start_house_log"
                    android:icon="@drawable/ic_baseline_exit_to_app_24px"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>