<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_cl_so"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/m_history_btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.35">

        <TextView
            android:id="@+id/history_tv_so_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salesorder"
            app:layout_constraintBottom_toTopOf="@id/history_pb_so_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/history_pb_so_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            app:layout_constraintBottom_toTopOf="@id/history_tv_so_last_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_tv_so_count" />

        <TextView
            android:id="@+id/history_tv_so_last_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_synchronize"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_pb_so_progress" />

        <TextView
            android:id="@+id/history_tv_so_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_progress"
            app:layout_constraintBottom_toTopOf="@id/history_pb_so_progress"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/m_history_cb_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/local2"
        app:layout_constraintBottom_toBottomOf="@id/m_history_btn_history"
        app:layout_constraintEnd_toStartOf="@id/m_history_btn_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/m_history_btn_history" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/m_history_btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/retrieve"
        app:icon="@drawable/ic_baseline_history_24px"
        app:iconGravity="textStart"
        app:iconPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_cl_so" />

</androidx.constraintlayout.widget.ConstraintLayout>