<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <EditText
            android:id="@+id/enter_qty_wgt_et_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:inputType="number"
            android:text="@string/default_quantity"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/enter_qty_wgt_tv_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/kg"
            android:textSize="24sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/enter_qty_wgt_sb_qty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:max="10"
        android:progress="1" />

    <SeekBar
        android:id="@+id/enter_qty_wgt_sb_qty_multi"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:max="10"
        android:progress="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.button.MaterialButton
            android:id="@+id/enter_qty_wgt_btn_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_cart"
            app:icon="@drawable/ic_baseline_add_shopping_cart_grey_24px"
            app:iconGravity="textStart"
            app:iconPadding="8dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/enter_qty_wgt_btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/enter_qty_wgt_btn_save"
            android:text="@string/cancel" />

    </RelativeLayout>

</LinearLayout>