<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.QuantityPickerActivity">

    <EditText
        android:id="@+id/quantity_picker_et_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:text="@string/default_quantity"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/quantity_picker_sb_qty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:max="10"
        android:progress="1" />

    <SeekBar
        android:id="@+id/quantity_picker_sb_qty_multi"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:max="10"
        android:progress="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/quantity_picker_btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_baseline_add_shopping_cart_grey_24px"
            android:text="@string/add_to_cart" />

        <Button
            android:id="@+id/quantity_picker_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/quantity_picker_btn_save"
            android:text="@string/cancel" />

    </RelativeLayout>

</LinearLayout>